--- a/ToolBoxGDNNew/GDN_Toolbox/GDN_Toolbox/GDN_Toolbox.csproj
+++ b/ToolBoxGDNNew/GDN_Toolbox/GDN_Toolbox/GDN_Toolbox.csproj
@@ -73,6 +73,7 @@
     <Compile Include="CustomControls\HintPassword.Designer.cs">
       <DependentUpon>HintPassword.cs</DependentUpon>
     </Compile>
+    <Compile Include="Data\UserData\UserData.cs" />
     <Compile Include="GlobalVariables\MousePosition\LastMousePosition.cs" />
     <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
