--- a/ToolBoxGDNNew/GDN_Toolbox/GDN_Toolbox/GDN_Toolbox.csproj
+++ b/ToolBoxGDNNew/GDN_Toolbox/GDN_Toolbox/GDN_Toolbox.csproj
@@ -89,6 +89,12 @@
       <DependentUpon>MainDesignForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
+    <Compile Include="ProgramDesignForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProgramDesignForm.Designer.cs">
+      <DependentUpon>ProgramDesignForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegisterForm.cs">
       <SubType>Form</SubType>
@@ -101,6 +107,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainDesignForm.resx">
       <DependentUpon>MainDesignForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProgramDesignForm.resx">
+      <DependentUpon>ProgramDesignForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -143,6 +152,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Pictures\Avatar\518-5186675_computer-icons-user-avatar-icon-design-login-user-removebg-preview.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Pictures\Logo\Logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.0.0.6482\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.0.0.6482\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
