--- a/ToolBoxGDNNew/GDN_Toolbox/GDN_Toolbox/App.config
+++ b/ToolBoxGDNNew/GDN_Toolbox/GDN_Toolbox/App.config
@@ -33,4 +33,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings><add name="ToolboxDatabase" connectionString="metadata=res://*/Data.Model.Model1.csdl|res://*/Data.Model.Model1.ssdl|res://*/Data.Model.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=userdb;password=anal;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+  <connectionStrings>
+    <add name="ToolboxDatabase" connectionString="metadata=res://*/Data.Model.Model1.csdl|res://*/Data.Model.Model1.ssdl|res://*/Data.Model.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=userdb;password=anal;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" />
+    <add name="ToolBoxOnline" connectionString="metadata=res://*/Data.ModelOnline.Model1.csdl|res://*/Data.ModelOnline.Model1.ssdl|res://*/Data.ModelOnline.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=sql7.freemysqlhosting.net;user id=sql7334847;password=mqWjLc5F3q;persistsecurityinfo=True;database=sql7334847&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+</configuration>
