--- a/ToolBoxGNA/GNA/ToolBox GNA/ToolBoxGNA.csproj
+++ b/ToolBoxGNA/GNA/ToolBox GNA/ToolBoxGNA.csproj
@@ -42,6 +42,9 @@
       <HintPath>..\packages\Microsoft.Office.Interop.Word.15.0.4797.1003\lib\net20\Microsoft.Office.Interop.Word.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
+    <Reference Include="SimpleWifi, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SimpleWifi.1.0.0.0\lib\net40\SimpleWifi.dll</HintPath>
+    </Reference>
     <Reference Include="SQLitePCLRaw.batteries_v2, Version=2.0.3.851, Culture=neutral, PublicKeyToken=8226ea5df37bcae9, processorArchitecture=MSIL">
       <HintPath>..\packages\SQLitePCLRaw.bundle_e_sqlite3.2.0.3\lib\net461\SQLitePCLRaw.batteries_v2.dll</HintPath>
     </Reference>
@@ -109,6 +112,8 @@
     <Compile Include="Controller\TempDeleter\Views\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controller\WifiChecker\Controller\WifiController.cs" />
+    <Compile Include="Controller\WifiChecker\Services\WifiService.cs" />
     <Compile Include="View\CustomControls\Tabs\Design\ControlDesign.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -233,6 +238,9 @@
     <EmbeddedResource Include="View\CustomControls\Tabs\TabTempDeleter.resx">
       <DependentUpon>TabTempDeleter.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\CustomControls\Tabs\TabWifiChecker.resx">
+      <DependentUpon>TabWifiChecker.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\Forms\DesignForms\DesignForm.resx">
       <DependentUpon>DesignForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -265,7 +273,9 @@
     <None Include="View\Pictures\Border\MinimizeButtonPicture.png" />
     <None Include="View\Pictures\Border\CloseButtonPicture.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Controller\WifiChecker\Entities\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\SQLitePCLRaw.lib.e_sqlite3.2.0.3\build\net461\SQLitePCLRaw.lib.e_sqlite3.targets" Condition="Exists('..\packages\SQLitePCLRaw.lib.e_sqlite3.2.0.3\build\net461\SQLitePCLRaw.lib.e_sqlite3.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
