--- a/ToolBoxGNA/GNA/ToolBox GNA/packages.config
+++ b/ToolBoxGNA/GNA/ToolBox GNA/packages.config
@@ -3,6 +3,7 @@
   <package id="Microsoft.Data.Sqlite" version="3.1.3" targetFramework="net472" />
   <package id="Microsoft.Data.Sqlite.Core" version="3.1.3" targetFramework="net472" />
   <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1003" targetFramework="net472" />
+  <package id="SimpleWifi" version="1.0.0.0" targetFramework="net472" />
   <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.0.3" targetFramework="net472" />
   <package id="SQLitePCLRaw.core" version="2.0.3" targetFramework="net472" />
   <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.3" targetFramework="net472" />
