--- a/ToolBoxGNA/GNA/DatabaseOperations/DatabaseOperations.csproj
+++ b/ToolBoxGNA/GNA/DatabaseOperations/DatabaseOperations.csproj
@@ -100,6 +100,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CurrentUsers\CurrentUser.cs" />
     <Compile Include="Model\Chat.cs">
       <DependentUpon>DbModel.tt</DependentUpon>
     </Compile>
@@ -142,7 +143,6 @@
     <Compile Include="Operations\FileManagerBuisseness\FileDatabaseServices.cs" />
     <Compile Include="Operations\LoginRegister\LoginService.cs" />
     <Compile Include="Operations\LoginRegister\RegisterService.cs" />
-    <Compile Include="Operations\StaticInfo\StaticInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
